fix: activity title overflow

--- a/fm/bleh.user.css
+++ b/fm/bleh.user.css
@@ -21763,7 +21763,6 @@
         }
 
         .name {
-            width: fit-content;
             font-weight: var(--font-weight-medium);
 
             .involved--track,
